# Bank_API_Connector_for_Grist

./: .env.example  .env.starling.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: grist-schema-bootstrap.md  implementation-preparation-pack.md  implementation-steps.md  starling-docker-setup.md
scripts/: README.md  preview_starling_transactions.py  print_starling_accounts.py
src/grist_finance_connector/: __init__.py  main.py
src/grist_finance_connector/config/: settings.py
src/grist_finance_connector/grist/: __init__.py  client.py
src/grist_finance_connector/logging/: __init__.py  setup.py
src/grist_finance_connector/models/: records.py
src/grist_finance_connector/providers/: base.py  factory.py  json_provider.py  starling_provider.py
src/grist_finance_connector/scheduler/: __init__.py  service.py
src/grist_finance_connector/services/: retry.py  sync.py
src/grist_finance_connector/state/: __init__.py  store.py
templates/grist/: README.md  Startling_Transactions.grist
tests/: test_settings.py  test_starling_provider.py  test_state_store.py  test_sync.py
